# shatv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  toolchain.cmake
.github/workflows/: actions-cleanup.yml  aur-shatv-bin.yml  ci.yml  windows-portable.yml
cmake/: FindFfmpeg.cmake  FindShatvMpv.cmake  FindSherpaOnnx.cmake  ShatvLinuxPackaging.cmake
docs/: architecture.md  asr-model-acquisition.md  linux-packaging.md
docs/plans/: 2026-04-01-stage3-mpv-backend.md
docs/superpowers/plans/: 2026-04-02-m3u-import.md  2026-04-08-recent-history.md
docs/superpowers/specs/: 2026-04-02-m3u-import-design.md  2026-04-08-recent-history-design.md
packaging/arch/shatv-git/: .SRCINFO  PKGBUILD
packaging/licenses/: MIT.txt
packaging/linux/: NOTICE.txt.in  THIRD_PARTY_SOURCES.md.in  top.shanana.shatv.desktop.in  top.shanana.shatv.metainfo.xml.in
packaging/windows/: NOTICE.txt.in  THIRD_PARTY_SOURCES.md.in
scripts/: start_local_hls_test.sh  start_local_ua_hls_test.sh
src/: CMakeLists.txt  main.cpp
src/app/: app_settings.cpp  app_settings.h  application.cpp  application.h  asr_model_archive_installer.cpp  asr_model_archive_installer.h  asr_model_service.cpp  asr_model_service.h  build_info.h.in  epg_programme_presentation.cpp  epg_programme_presentation.h  epg_service.cpp  epg_service.h  launch_options.cpp  launch_options.h  logging.cpp  logging.h  m3u_playlist_parser.cpp  m3u_playlist_parser.h  main.cpp  open_request.cpp  open_request.h  qml_spike_main.cpp  source_open_service.cpp  source_open_service.h  xmltv_epg_parser.cpp  xmltv_epg_parser.h  xmltv_epg_payload.cpp  xmltv_epg_payload.h
src/application/: player_controller.cpp  player_controller.h
src/domain/: channel.h  media_source.cpp  media_source.h  playback_state.h  player_snapshot.h
src/media/: ffmpeg_error.cpp  ffmpeg_error.h
src/media/asr/: pcm_converter.cpp  pcm_converter.h  streaming_recognizer_worker.cpp  streaming_recognizer_worker.h
src/media/audio/: audio_output.cpp  audio_output.h
src/media/clock/: playback_clock.h
src/media/decode/: audio_decoder.cpp  audio_decoder.h  video_decoder.cpp  video_decoder.h
src/media/demux/: demuxer.cpp  demuxer.h
src/media/video/: video_frame.h  video_frame_queue.cpp  video_frame_queue.h
src/player/: fake_player_backend.cpp  fake_player_backend.h  ffmpeg_player_backend.cpp  ffmpeg_player_backend.h  mpv_event_adapter.cpp  mpv_event_adapter.h  mpv_player_backend.cpp  mpv_player_backend.h  mpv_render_host.h  mpv_render_widget.cpp  mpv_render_widget.h  player_backend.cpp  player_backend.h  retry_schedule.cpp  retry_schedule.h  video_frame_sink.h
src/tools/: asr_model_probe.cpp
src/ui/models/: channel_filter_model.cpp  channel_filter_model.h  channel_list_model.cpp  channel_list_model.h
src/ui/panels/: playback_osd_overlay.cpp  playback_osd_overlay.h  playback_status_panel.cpp  playback_status_panel.h  player_control_bar.cpp  player_control_bar.h
src/ui/qml/: MainWindow.qml  Theme.qml
src/ui/qml/controls/: MaterialSymbolIcon.qml  ThemedComboBox.qml  ThemedItemDelegate.qml  ThemedSlider.qml  ThemedTextField.qml  ThemedToolButton.qml  WindowControlButton.qml
src/ui/qml/dialogs/: AboutDialog.qml  NetworkSettingsDialog.qml  OpenUrlDialog.qml  SettingsWindow.qml
src/ui/qml_spike/: mpv_video_item.cpp  mpv_video_item.h  spike_playback_bridge.cpp  spike_playback_bridge.h
src/ui/qml_spike/qml/: SpikeWindow.qml
src/ui/shell/: app_shell_bridge.cpp  app_shell_bridge.h
src/ui/video/: mpv_video_item.cpp  mpv_video_item.h  video_presenter_item.cpp  video_presenter_item.h
src/ui/video/shaders/: video_present.frag  video_present.vert
src/ui/widgets/: playback_viewport.cpp  playback_viewport.h
src/ui/windows/: about_dialog_content.cpp  about_dialog_content.h  main_window.cpp  main_window.h  main_window_bridge.cpp  main_window_bridge.h  network_settings_dialog_content.cpp  network_settings_dialog_content.h
tests/: .clang-tidy  CMakeLists.txt
tests/cmake/: expect_asr_probe_missing_args.cmake
tests/unit/: app_settings_recent_test.cpp  app_shell_bridge_test.cpp  app_skeleton_test.cpp  asr_model_archive_installer_test.cpp  asr_model_service_test.cpp  asr_pcm_converter_test.cpp  asr_streaming_recognizer_worker_test.cpp  channel_filter_model_test.cpp  demuxer_interrupt_test.cpp  epg_programme_presentation_test.cpp  epg_service_test.cpp  ffmpeg_player_backend_retry_test.cpp  launch_options_test.cpp  localization_test.cpp  logging_test.cpp  m3u_playlist_parser_test.cpp  main_window_fullscreen_test.cpp  mpv_event_adapter_test.cpp  mpv_player_backend_state_test.cpp  mpv_render_host_test.cpp  mpv_video_item_spike_test.cpp  playback_viewport_test.cpp  player_controller_retry_test.cpp  retry_schedule_test.cpp  source_open_service_test.cpp  windows_dependency_config_test.cpp  xmltv_epg_parser_test.cpp  xmltv_epg_payload_test.cpp
translations/: shatv_zh_CN.ts
